# atropos-chess

./: pyproject.toml
atroposlib/envs/: base.py
environments/: gsm8k_server.py
environments/community/chess_env/: .gitignore  chess_env.py  chess_env_config.yaml  chess_env_types.py  configs.py  curriculum_manager.py  dataset.py  prompts.py  pyproject.toml  t.py  test.py
environments/community/chess_env/SFT/: dataset.py  train_sft_tinker.py
environments/community/chess_env/chess_env_eval_results/: evaluate_config.yaml
environments/community/chess_env/configs/: chess_env_config.yaml  train-fft.yaml
environments/community/chess_env/logs/qwen3-chess-sft/: code.diff
environments/community/chess_env/tests/: behavior_tests.py  full_tests.py
example_trainer/: model.py  trainers.py  training.py
