[project]
name = "chess-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "atroposlib>=0.4.0",
    "chess>=1.11.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
tinker = [
    "tinker>=0.16.1",
    "tinker-cookbook>=0.2.2",
]

[tool.uv.sources]
atroposlib = { path = "../../../", editable = true }
